--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 languageCode = "en-us"
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+#baseurl = "http://replace-this-with-your-hugo-site.com/"
 title = "My New Hugo Site"
 theme = "hyde"
+relativeURL = true
