--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hyde"]
 	path = themes/hyde
 	url = https://github.com/spf13/hyde.git
+[submodule "themes/lanyon"]
+	path = themes/lanyon
+	url = https://github.com/tummychow/lanyon-hugo.git
