--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/lanyon"]
 	path = themes/lanyon
 	url = https://github.com/tummychow/lanyon-hugo.git
+[submodule "themes/licorice"]
+	path = themes/licorice
+	url = https://github.com/eliasson/liquorice.git
